--- a/rosdoc.yaml
+++ b/rosdoc.yaml
@@ -1,3 +1,3 @@
  - builder: external
-   external_url: http://ias.cs.tum.edu/kb/api/rosprolog
+   external_url: http://knowrob.org/kb/api/rosprolog
    external_label: Prolog API
