Configured catkin installation targets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,10 @@ find_package(catkin REQUIRED COMPONENTS catkin)
 catkin_package(
     DEPENDS swi-prolog swi-prolog-semweb swi-prolog-java
 )
+
+install(DIRECTORY prolog/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/prolog)
+  
+FILE(GLOB sh_files "scripts/*")
+install(PROGRAMS ${sh_files}
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/scripts/)
