--- a/package.xml
+++ b/package.xml
@@ -16,8 +16,16 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>roslib</build_depend>
+  <build_depend>rospack</build_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>tf</build_depend>
+  
   <run_depend>swi-prolog</run_depend>
   <run_depend>swi-prolog-java</run_depend>
+  <run_depend>roslib</run_depend>
+  <run_depend>rospack</run_depend>
+  <run_depend>roscpp</run_depend>
   
   <export>
     <rosdoc config="rosdoc.yaml"/>
