--- a/package.xml
+++ b/package.xml
@@ -21,12 +21,14 @@
   <build_depend>rospack</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>geometry_msgs</build_depend>
   
   <run_depend>swi-prolog</run_depend>
   <run_depend>swi-prolog-java</run_depend>
   <run_depend>roslib</run_depend>
   <run_depend>rospack</run_depend>
   <run_depend>roscpp</run_depend>
+  <run_depend>geometry_msgs</run_depend>
   
   <export>
     <rosdoc config="rosdoc.yaml"/>
