--- a/package.xml
+++ b/package.xml
@@ -22,6 +22,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
   
   <run_depend>swi-prolog</run_depend>
   <run_depend>swi-prolog-java</run_depend>
@@ -29,6 +30,7 @@
   <run_depend>rospack</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>geometry_msgs</run_depend>
+  <run_depend>message_runtime</run_depend>
   
   <export>
     <rosdoc config="rosdoc.yaml"/>
