--- a/package.xml
+++ b/package.xml
@@ -20,17 +20,22 @@
   <build_depend>roslib</build_depend>
   <build_depend>rospack</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>rospy</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>json_prolog_msgs</build_depend>
+  <build_depend>libjson-glib</build_depend>
   
   <run_depend>swi-prolog</run_depend>
   <run_depend>swi-prolog-java</run_depend>
   <run_depend>roslib</run_depend>
   <run_depend>rospack</run_depend>
   <run_depend>roscpp</run_depend>
+  <run_depend>rospy</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
+  <run_depend>json_prolog_msgs</run_depend>
   
   <export>
     <rosdoc config="rosdoc.yaml"/>
