--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,8 +92,8 @@ target_link_libraries(test_rosprolog rosprolog_client ${catkin_LIBRARIES})
 add_dependencies(test_rosprolog ${catkin_EXPORTED_TARGETS})
 
 install(
-  DIRECTORY prolog/
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/prolog
+  DIRECTORY src/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/src
 )
 install(
   DIRECTORY include/${PROJECT_NAME}/
