--- a/package.xml
+++ b/package.xml
@@ -35,6 +35,7 @@
   <run_depend>geometry_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>json_prolog_msgs</run_depend>
+  <run_depend>python-future</run_depend>
   
   <export>
     <rosdoc config="rosdoc.yaml"/>
